--- a/config.yml
+++ b/config.yml
@@ -16,4 +16,5 @@ MASK_PATH_VAL: "./datasets/mask/val"
 IMAGENET_PRETRAINED_MODELS:
   HRNETV2_W18: "./pretrained_models/hrnetv2_w18_imagenet_pretrained.pth"
   HRNETV2_W32: "./pretrained_models/hrnetv2_w32_imagenet_pretrained.pth"
+  HRNETV2_W40: "./pretrained_models/hrnetv2_w40_imagenet_pretrained.pth"
   HRNETV2_W48: "./pretrained_models/hrnetv2_w48_imagenet_pretrained.pth"
